# rhythmix

./: README.md  package-lock.json  pyproject.toml
backend/: manage.py
backend/api/: admin.py  models.py  urls.py  views.py
backend/api/migrations/: 0002_initialprediction.py  0003_rename_initialprediction_promptprediction.py  0004_promptprediction_graph_state.py  0005_alter_promptprediction_graph_state.py  0006_attributevalues.py  0007_songprediction.py  0009_remove_songprediction_graph_state.py
backend/crud/: settings.py  urls.py
backend/langgraph_integration/preprocessing/: create_vector_db.py  download_data.py
backend/langgraph_integration/recommender/: graph.py  nodes.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Axios.jsx  Home.jsx  statusAPI.jsx
frontend/src/components/forms/: TextForm.jsx
frontend/src/components/navbar/: Navbar.jsx
src/rhythmix/: __init__.py
src/rhythmix/backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/rhythmix/backend/api/migrations/: 0001_initial.py  0008_alter_songprediction_graph_state.py  0010_remove_songprediction_song_and_more.py  0011_savedsongs.py
src/rhythmix/configs/: settings.py
src/rhythmix/frontend/: index.html  package-lock.json  package.json
src/rhythmix/frontend/src/: App.css  App.jsx
src/rhythmix/frontend/src/components/: AdjustAttributes.jsx  AlertMessage.jsx  Axios.jsx  HTMLTooltip.jsx  (+6 more)
src/rhythmix/preprocessing/: create_vector_db.py  download_data.py
src/rhythmix/recommender/: graph.py  nodes.py  prompts.py
(+1 files in other folders)
