[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "django-cors-headers>=4.7.0",
  "django-cors>=0.1",
  "django-filter>=25.1",
  "django>=5.2",
  "djangorestframework>=3.16.0",
  "langchain>=0.3.23",
  "langchain-community>=0.3.21",
  "langchain-openai>=0.3.12",
  "langchain-qdrant>=0.2.0",
  "markdown>=3.8",
  "pandas>=2.2.3",
  "langgraph>=0.3.29",
  "pre-commit>=4.2.0",
  "python-dotenv>=1.1.0",
  "qdrant-client[fastembed]>=1.13.3",
  "kagglehub>=0.3.11"
]
description = "Add your description here"
name = "rhythmix"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
